Yellow aside fixed
The yellow-aside-thingie is now fixed, before it was way too far to the
right.

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ padding-left: 25px;
 #aside {
 margin-right: 50px;
 padding-left: 50px;
-width: 250px;
+width: 200px;
 height: 500px;
     background-color: yellow;
 }
@@ -74,15 +74,14 @@ height: 500px;
 #sectionaside {
     display: flex;
     margin: auto;
-    width: 800px;
+    width: 1450px;
     margin-top: 25px;
 }
 
 #aside ul {
     list-style: none;
     padding-left: 0px;
-    display: flex;
-    flex-direction: row;
+
 }
 
 #aside a {
